<resources>
    <string name="app_name">Rease</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Senha</string>
    <string name="action_sign_in">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">Este endereço de e-mail é inválido</string>
    <string name="error_invalid_password">Esta senha é muito curta</string>
    <string name="error_incorrect_password">Essa senha está incorreta</string>
    <string name="error_field_required">Este campo é obrigatório</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="login_tv_cadastre_se">Primeiro acesso? Cadastre-se</string>
    <string name="erro_conexao_indisponivel">Conexão indisponivel, por favor ative sua rede móvel ou Wi-Fi.</string>
    <string name="usuario_e_ou_senha_invalido">Usuário e/ou senha invalidos.</string>
    <string name="activity_criar_conta">Criar uma conta</string>
    <string name="prompt_nome">Nome</string>
    <string name="prompt_sobrenome">Sobrenome</string>
    <string name="prompt_cpf">CPF</string>
    <string name="salvar_btn">SALVAR</string>
    <string name="error_invalid_cpf">Este CPF é inválido</string>
    <string name="error_email_ja_registardo">Esse e-mail já está registrado</string>
    <string name="form_tv_entrar">Você possui uma conta? Entre</string>
    <string name="title_activity_main">Rease</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_drawer_inscricoes">Inscrições</string>
    <string name="menu_drawer_eventos">Eventos</string>
    <string name="menu_drawer_certificados">Certificados</string>
    <string name="title_activity_perfil">Perfil</string>
    <string name="menu_drawer_perfil">Perfil</string>
    <string name="text_nome">Nome</string>
    <string name="title_activity_inscricao">Inscrição</string>
    <string name="text_tipo_inscricao">Tipo de Inscrição</string>
    <string name="text_palestras">Palestras</string>
    <string name="text_manha">Manhã</string>
    <string name="text_tarde">Tarde</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_save">Confirmar</string>
    <string name="text_minicurso_atividade">Minicurso/Atividade</string>
    <string name="text_vagas">Vagas</string>
    <string name="text_profissional_descricao">Profissional/Descrição</string>
    <string name="text_horario">Horário</string>
    <string name="btn_ok">OK</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="text_Total">Total</string>
    <string name="text_valor">Valor</string>
    <string name="erro_verfiqueque_opcoes">Verifique se as opções desejadas estão selecionadas</string>
    <string name="title_activity_inscricao_detalhes">InscricaoDetalhesActivity</string>
    <string name="text_minicurso">Minicurso</string>
    <string name="text_atividade">Atividade</string>
    <string name="btn_enviar">Enviar</string>
    <string name="btn_tira_foto_doc">Tira foto do documento</string>
    <string name="text_documento_necessario">Documento Necessário</string>
    <string name="text_documento_enviados">Documentos Enviados</string>
    <string name="selecione_um_item">Selecione um item</string>
    <string name="msg_cadastrado_sucesso">Cadastrado com sucesso.</string>
    <string name="text_tipo_certificado">minicurso/atividade/palestra</string>
    <string name="text_turma_palestra">Turma/Palestra</string>
    <string name="text_evento">Evento</string>
    <string name="title_activity_certificado">Certificados</string>
    <string name="text_minicurso_atividade_palestra">Minicurso/Atividade/Palestra</string>
    <string name="text_disponivel">Disponível</string>
    <string name="prompt_nome_certificado">Seu nome completo</string>
    <string name="btn_certificado">Certificado</string>
    <string name="title_activity_configuracao">Configurações</string>

    <!-- Configurações -->
    <string name="setting_suporte">Contato suporte</string>
    <string name="setting_versao">Versão</string>
    <string name="setting_numero_versao">Numero da versão</string>
    <string name="setting_termos_uso">Termos de uso</string>
    <string name="setting_politica_privacidade">Politica de privacidade</string>
    <string name="setting_redes_sociais">Redes sociais</string>
    <string name="setting_facebook">Curta Rease no Facebook</string>
    <string name="setting_twitter">Siga @Rease no Twitter</string>
    <string name="setting_ajude_comunidade">Ajude a comunidade</string>
    <string name="setting_convide_amigos">Convide amigos</string>
    <string name="setting_avaliar">Avaliar o Rease</string>
    <string name="settin_sair">Sair</string>
    <string name="msg_compartilhar">Compartilhar</string>
    <string name="menu_drawer_configuracoes">Configurações</string>
    <string name="text_atividades_gerais">Atividades Gerais</string>
</resources>
