<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_eventos"
            android:icon="@drawable/ic_menu_list"
            android:title="@string/menu_drawer_eventos" />
        <item
            android:id="@+id/nav_inscricoes"
            android:icon="@drawable/ic_menu_inscricoes"
            android:title="@string/menu_drawer_inscricoes" />
        <item
            android:id="@+id/nav_certificados"
            android:icon="@drawable/ic_menu_certificados"
            android:title="@string/menu_drawer_certificados" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_peril"
                android:icon="@drawable/ic_menu_peril"
                android:title="@string/menu_drawer_perfil" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Convide seus amigos" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
