<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="6dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="false"
    card_view:cardCornerRadius="2dp"
    card_view:cardElevation="6dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_tipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tipo_certificado" />

        <TextView
            android:id="@+id/tv_turma_palestra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_turma_palestra"
            android:textSize="22sp"
            android:paddingBottom="3dp"/>

        <TextView
            android:id="@+id/tv_evento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_evento" />
    </LinearLayout>

</android.support.v7.widget.CardView>