<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_certificado"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="br.com.eventoseartigos.sefd.activity.CertificadoActivity">

    <!-- progress -->
    <ProgressBar
        android:id="@+id/progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

            <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:card_view="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layout_progress"
                android:layout_margin="6dp"
                android:foreground="?attr/selectableItemBackground"
                app:cardElevation="3dp"
                app:cardPreventCornerOverlap="false"
                app:cardUseCompatPadding="false"
                card_view:cardCornerRadius="2dp"
                card_view:cardElevation="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:id="@+id/tv_tipo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/abc_action_bar_subtitle_bottom_margin_material"
                        android:text="@string/text_minicurso_atividade_palestra"
                        android:textColor="@color/primary_text_default_material_light"
                        android:textSize="@dimen/abc_text_size_subhead_material" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/divider" />

                    <TextView
                        android:id="@+id/tv_evento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_evento"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"/>

                    <TextView
                        android:id="@+id/tv_turma_palestra"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_turma_palestra"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tv_nome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_nome"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"/>

                    <TextView
                        android:id="@+id/tv_disponivel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/text_disponivel"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp" />

                    <Button
                        android:id="@+id/btn_certificado"
                        style="?android:textAppearanceSmall"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:text="@string/btn_certificado"
                        android:textStyle="bold"
                        android:background="@color/accent"
                        android:textColor="@color/abc_primary_text_material_dark" />

                </LinearLayout>
            </android.support.v7.widget.CardView>
    </ScrollView>
</FrameLayout>
